Fix T86765: Custom properties are included in `__dir__`

Remove custom properties from `__dir__` method result since these
can't be accessed using `__getattr__`.

Introduced in the 2.5x Python API update.